endpoint-exposer/output/api-fbcf7a60-8ca8-4bf2-b1b5-5c59bb5bc4fd/update-api-5b7636e1-304b-4ef9-92a9-2a0b102686f4/authorization-policy-fbcf7a60-8ca8-4bf2-b1b5-5c59bb5bc4fd-private.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: api-fbcf7a60-8ca8-4bf2-b1b5-5c59bb5bc4fd-authz-test
  namespace: gateways
spec:
  action: CUSTOM
